# teaclave-trustzone-sdk

./: .gitignore  .licenserc.yaml  LICENSE  Makefile
crates/: Cargo.toml
crates/optee-teec/: Cargo.toml
crates/optee-teec-macros/: Cargo.toml
crates/optee-teec-macros/src/: lib.rs
crates/optee-teec-plugin-bindgen/: Cargo.toml
crates/optee-teec-plugin-bindgen/src/: lib.rs
crates/optee-teec-sys/src/: lib.rs  plugin_method.rs
crates/optee-teec-systest/: Cargo.toml  build.rs
crates/optee-teec/src/: extension.rs  lib.rs
crates/optee-utee/: Cargo.toml
crates/optee-utee-build/: Cargo.toml
crates/optee-utee-sys/: Cargo.toml
crates/optee-utee-systest/: Cargo.toml
crates/rustls_provider/: Cargo.toml
crates/secure_db/: Cargo.toml
examples/ca/: Cargo.toml  Makefile.include
examples/ca/acipher-rs/: Cargo.toml  Makefile
examples/ca/acipher-rs/src/: main.rs
examples/ca/aes-rs/: Cargo.toml  Makefile
examples/ca/aes-rs/src/: main.rs
examples/ca/authentication-rs/: Cargo.toml  Makefile
examples/ca/authentication-rs/src/: main.rs
examples/ca/big_int-rs/: Cargo.toml  Makefile
examples/ca/big_int-rs/src/: main.rs
examples/ca/build_with_optee_utee_sys-rs/: Cargo.toml  Makefile
examples/ca/build_with_optee_utee_sys-rs/src/: main.rs
examples/ca/client_pool-rs/: Cargo.toml  Makefile
examples/ca/diffie_hellman-rs/: Cargo.toml  Makefile
examples/ca/diffie_hellman-rs/src/: main.rs
examples/ca/digest-rs/: Cargo.toml  Makefile
examples/ca/digest-rs/src/: main.rs
examples/ca/error_handling-rs/: Cargo.toml  Makefile
examples/ca/error_handling-rs/src/: main.rs
examples/ca/hello_world-rs/: Cargo.toml  Makefile
examples/ca/hello_world-rs/src/: main.rs
examples/ca/hotp-rs/: Cargo.toml  Makefile
examples/ca/hotp-rs/src/: main.rs
examples/ca/inter_ta-rs/: Cargo.toml  Makefile
examples/ca/inter_ta-rs/src/: main.rs
examples/ca/message_passing_interface-rs/: Cargo.toml  Makefile
examples/ca/message_passing_interface-rs/src/: main.rs
examples/ca/mnist-rs/: Cargo.toml  Makefile
examples/ca/mnist-rs/src/: tee.rs
examples/ca/property-rs/: Cargo.toml  Makefile
examples/ca/property-rs/src/: main.rs
examples/ca/random-rs/: Cargo.toml  Makefile
examples/ca/random-rs/src/: main.rs
examples/ca/secure_db_abstraction-rs/: Cargo.toml  Makefile
examples/ca/secure_db_abstraction-rs/src/: main.rs
examples/ca/secure_storage-rs/: Cargo.toml  Makefile
examples/ca/secure_storage-rs/src/: main.rs
examples/ca/serde-rs/: Cargo.toml  Makefile
examples/ca/serde-rs/src/: main.rs
examples/ca/signature_verification-rs/: Cargo.toml  Makefile
examples/ca/signature_verification-rs/src/: main.rs
examples/ca/supp_plugin-rs/: Cargo.toml  Makefile
examples/ca/supp_plugin-rs-plugin/: Cargo.toml  Makefile  build.rs
examples/ca/supp_plugin-rs-plugin/src/: lib.rs
examples/ca/supp_plugin-rs/src/: main.rs
examples/ca/tcp_client-rs/: Cargo.toml  Makefile
examples/ca/tcp_client-rs/src/: main.rs
examples/ca/time-rs/: Cargo.toml  Makefile
examples/ca/time-rs/src/: main.rs
examples/ca/tls_client-rs/: Cargo.toml  Makefile
examples/ca/tls_client-rs/src/: main.rs
examples/ca/tls_server-rs/: Cargo.toml  Makefile
examples/ca/tls_server-rs/src/: main.rs
examples/ca/udp_socket-rs/: Cargo.toml  Makefile
examples/ca/udp_socket-rs/src/: main.rs
examples/ta/: Cargo.toml  Makefile.include
examples/ta/acipher-rs/: Cargo.toml  Makefile  build.rs
examples/ta/acipher-rs/src/: main.rs
examples/ta/aes-rs/: Cargo.toml  Makefile  build.rs
examples/ta/aes-rs/src/: main.rs
examples/ta/authentication-rs/: Cargo.toml  Makefile  build.rs
examples/ta/authentication-rs/src/: main.rs
examples/ta/big_int-rs/: Cargo.toml  Makefile  build.rs
examples/ta/big_int-rs/src/: main.rs
examples/ta/build_with_optee_utee_sys-rs/: Cargo.toml  Makefile  build.rs
examples/ta/build_with_optee_utee_sys-rs/src/: main.rs
examples/ta/client_pool-rs/: Cargo.toml  Makefile  build.rs
examples/ta/client_pool-rs/src/: main.rs
examples/ta/diffie_hellman-rs/: Cargo.toml  Makefile  build.rs
examples/ta/diffie_hellman-rs/src/: main.rs
examples/ta/digest-rs/: Cargo.toml  Makefile  build.rs
examples/ta/digest-rs/src/: main.rs
examples/ta/error_handling-rs/: Cargo.toml  Makefile  build.rs
examples/ta/error_handling-rs/src/: main.rs
examples/ta/hello_world-rs/: Cargo.toml  Makefile  build.rs
examples/ta/hello_world-rs/src/: main.rs
examples/ta/hotp-rs/: Cargo.toml  Makefile  build.rs
examples/ta/hotp-rs/src/: main.rs
examples/ta/inter_ta-rs/: Cargo.toml  Makefile  build.rs
examples/ta/inter_ta-rs/src/: main.rs
examples/ta/message_passing_interface-rs/: Cargo.toml  Makefile  build.rs
examples/ta/message_passing_interface-rs/src/: main.rs
examples/ta/mnist-rs/: Makefile
examples/ta/mnist-rs/inference/: Cargo.toml  Makefile  build.rs
examples/ta/mnist-rs/train/: Cargo.toml  Makefile  build.rs
examples/ta/property-rs/: Cargo.toml  Makefile  build.rs
examples/ta/property-rs/src/: main.rs
examples/ta/proto/: Cargo.toml
examples/ta/proto/src/: acipher.rs  aes.rs  authentication.rs  big_int.rs  build_with_optee_utee_sys.rs  client_pool.rs  diffie_hellman.rs  digest.rs  error_handling.rs  hello_world.rs  hotp.rs  inter_ta.rs  lib.rs  message_passing_interface.rs  property.rs  random.rs  secure_db_abstraction.rs  secure_storage.rs  serde.rs  signature_verification.rs  (+6 more)
examples/ta/random-rs/: Cargo.toml  Makefile  build.rs
examples/ta/secure_db_abstraction-rs/: Cargo.toml  Makefile  build.rs
examples/ta/secure_storage-rs/: Cargo.toml  Makefile  build.rs
examples/ta/serde-rs/: Cargo.toml  Makefile  build.rs
examples/ta/signature_verification-rs/: Cargo.toml  Makefile  build.rs
examples/ta/supp_plugin-rs/: Cargo.toml  Makefile  build.rs
examples/ta/tcp_client-rs/: Cargo.toml  Makefile  build.rs
examples/ta/time-rs/: Cargo.toml  Makefile  build.rs
examples/ta/tls_client-rs/: Cargo.toml  Makefile  build.rs
examples/ta/tls_server-rs/: Cargo.toml  Makefile  build.rs
examples/ta/udp_socket-rs/: Cargo.toml  Makefile  build.rs
(+66 files in other folders)
