# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "3"
members = [
    "optee-teec",
    "optee-teec-macros",
    "optee-teec-plugin-bindgen",
    "optee-teec-sys",
    "optee-teec-systest",
    "optee-utee",
    "optee-utee-build",
    "optee-utee-macros",
    "optee-utee-sys",
    "optee-utee-systest",
    "rustls_provider",
    "secure_db"
]

[workspace.package]
version = "0.8.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
description = "TEE internal core API."
edition = "2024"

[workspace.dependencies]
optee-teec = { version = "0.8.0", path = "optee-teec" }
optee-teec-macros = { version = "0.8.0", path = "optee-teec-macros" }
optee-teec-plugin-bindgen = { version = "0.8.0", path = "optee-teec-plugin-bindgen" }
optee-teec-sys = { version = "0.8.0", path = "optee-teec-sys" }
optee-utee = { version = "0.8.0", path = "optee-utee" }
optee-utee-macros = { version = "0.8.0", path = "optee-utee-macros" }
optee-utee-sys = { version = "0.8.0", path = "optee-utee-sys" }

bitflags = "2.11.0"
num_enum = "0.7.6"
uuid = { version = "1.23", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
proc-macro2 = "1.0.92"
libc = "0.2" 
rand = "0.10"
once_cell = "1.20.2"
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
log = "0.4.29"
