# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "3"
members = [
    "optee-teec",
    "optee-teec-build",
    "optee-teec-macros",
    "optee-teec-sys",
    "optee-teec-systest",
    "optee-utee",
    "optee-utee-build",
    "optee-utee-macros",
    "optee-utee-sys",
    "optee-utee-systest",
    "rustls_provider",
    "secure_db"
]

[workspace.package]
version = "0.9.0"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]
license = "Apache-2.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
description = "TEE internal core API."
edition = "2024"

[workspace.dependencies]
optee-teec = { version = "0.9.0", path = "optee-teec" }
optee-teec-build = { version = "0.9.0", path = "optee-teec-build" }
optee-teec-macros = { version = "0.9.0", path = "optee-teec-macros" }
optee-teec-sys = { version = "0.9.0", path = "optee-teec-sys" }
optee-utee = { version = "0.9.0", path = "optee-utee" }
optee-utee-macros = { version = "0.9.0", path = "optee-utee-macros" }
optee-utee-sys = { version = "0.9.0", path = "optee-utee-sys" }

bitflags = "2.13.1"
num_enum = { version = "0.7.6", default-features = false }
uuid = { version = "1.23", default-features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
quote = "1.0.46"
syn = { version = "2.0.117", features = ["full"] }
proc-macro2 = "1.0.106"
libc = "0.2.184"
rand = "0.10"
once_cell = "1.21.4"
serde = { version = "1.0.228" }
serde_json = { version = "1.0.149" }
log = "0.4.29"
document-features = "0.2.12"
ctest = "0.5.1"
cc = "1.2.67"
prettyplease = "0.2.37"
libc_alloc = "1.0.7"
strum = { version = "0.28", default-features = false }
mockall = "0.15.0"
rustls = { version = "0.23.37", default-features = false }
rustls-rustcrypto = "0.0.2-alpha"
getrandom = { version = "0.2.17", default-features = false }
base64ct = "1.8.3"
ed25519-dalek = "2.2.0"
bincode = "1.3.3"
anyhow = "1.0.103"
hashbrown = "0.15.5"
