# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "optee-utee-sys"
description = "Native bindings to the libutee library."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
links = "utee"

[dependencies]
mockall = { workspace = true, optional = true }
document-features.workspace = true

[features]
## enables nothing.
default = []
## enables the standard library. Without it, the crate is compiled as `no_std`
std = []
## prevents the build script from emitting linker directives for the OP-TEE
## native libraries (libutee, libutils, libmbedtls). This is needed for
## environments where those libraries are not available, such as docs.rs or
## host-side testing.
no_link = []
## enables host-side unit testing of TA code by using the `mockall` crate to
## auto-generate mock implementations of the TEE internal API FFI declarations.
## It implicitly enables `std` (required by mockall) and `no_link` (no real TEE
## libraries should be linked during host-side tests).
mock = ["dep:mockall", "std", "no_link"]

[package.metadata.docs.rs]
features = ["no_link"]
