# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "optee-utee"
description = "TEE internal core API."
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
optee-utee-sys.workspace = true
optee-utee-macros.workspace = true
bitflags.workspace = true
uuid.workspace = true
hex.workspace = true
libc_alloc = { workspace = true }
strum = { workspace = true, default-features = false, features = ["derive"] }
document-features.workspace = true
num_enum.workspace = true

[dev-dependencies]
rand.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
optee-utee-sys = { workspace = true, features = ["mock"] }

[features]
## enables nothing.
default = []
## enables the ability to use the standard library.
std = ["optee-utee-sys/std", "optee-utee-macros/std"]
## disables the default panic handler (which calls `TEE_Panic`), allowing TA
## developers to provide a custom `#[panic_handler]`.
no_panic_handler = []
## provides linker stubs for `_Unwind_Resume` and `rust_eh_personality`. These
## are required by the precompiled sysroot when not using `-Z build-std`, even
## though `panic=abort` guarantees they are never called at runtime.
unwind_stubs = []
## used for docs.rs to generate docs.
doc = ["optee-utee-sys/no_link"]

[package.metadata.docs.rs]
features = ["doc"]
