# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = ["*-rs", "*-rs-plugin"]

[workspace.dependencies]
proto = { path = "../ta/proto" }
optee-teec = { path = "../../crates/optee-teec" }
optee-teec-build = { path = "../../crates/optee-teec-build" }
libc = "0.2.186"
r2d2 = "0.8.10"
clap = "4.6.2"
anyhow = "1.0.103"
hex = "0.4.3"
mobc = "0.9.0"
tokio = "1.52.3"
strum = "0.28.0"
url = "2.5.8"
serde_json = "1.0.150"
rand = "0.9.5"
rust-mnist = "0.2.0"
bytemuck = "1.25.1"
image = "0.25.10"
tiny_http = "0.12.0"
ureq = "3.3.0"
flate2 = "1.1.9"
uuid = "1.23"

[profile.release]
lto = true
strip = true
