# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = [
    "proto",
    "acipher-rs",
    "aes-rs",
    "authentication-rs",
    "big_int-rs",
    "build_with_optee_utee_sys-rs",
    "client_pool-rs",
    "diffie_hellman-rs",
    "digest-rs",
    "error_handling-rs",
    "hello_world-rs",
    "hotp-rs",
    "inter_ta-rs",
    "message_passing_interface-rs",
    "property-rs",
    "random-rs",
    "secure_db_abstraction-rs",
    "secure_storage-rs",
    "serde-rs",
    "signature_verification-rs",
    "supp_plugin-rs",
    "tcp_client-rs",
    "time-rs",
    "tls_client-rs",
    "tls_server-rs",
    "udp_socket-rs",
    "mnist-rs/common",
    "mnist-rs/inference",
    "mnist-rs/train",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.4.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]

[workspace.dependencies]
proto = { path = "proto" }
optee-utee-sys = { path = "../../crates/optee-utee-sys" }
optee-utee = { path = "../../crates/optee-utee", features = ["unwind_stubs"] }
optee-utee-build = { path = "../../crates/optee-utee-build" }
bytemuck = { version = "1.21.0", features = ["min_const_generics"] }
burn = { version = "0.17", default-features = false, features = ["ndarray", "autodiff"] }
spin = "0.9.8"
serde = { version = "1.0.218", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }

[profile.release]
panic = "abort"
lto = true
opt-level = 1
