# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[workspace]
resolver = "2"
members = [
    "proto",
    "acipher-rs",
    "aes-rs",
    "authentication-rs",
    "big_int-rs",
    "build_with_optee_utee_sys-rs",
    "client_pool-rs",
    "diffie_hellman-rs",
    "digest-rs",
    "error_handling-rs",
    "hello_world-rs",
    "hotp-rs",
    "inter_ta-rs",
    "message_passing_interface-rs",
    "property-rs",
    "random-rs",
    "secure_db_abstraction-rs",
    "secure_storage-rs",
    "serde-rs",
    "signature_verification-rs",
    "supp_plugin-rs",
    "tcp_client-rs",
    "time-rs",
    "tls_client-rs",
    "tls_server-rs",
    "udp_socket-rs",
    "mnist-rs/common",
    "mnist-rs/inference",
    "mnist-rs/train",
]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.4.0"
repository = "https://github.com/apache/teaclave-trustzone-sdk.git"
authors = ["Teaclave Contributors <dev@teaclave.apache.org>"]

[workspace.dependencies]
proto = { path = "proto" }
optee-utee-sys = { path = "../../crates/optee-utee-sys" }
optee-utee = { path = "../../crates/optee-utee", features = ["unwind_stubs"] }
optee-utee-build = { path = "../../crates/optee-utee-build" }
rustls_provider = { path = "../../crates/rustls_provider" }
secure_db = { path = "../../crates/secure_db" }
common = { path = "mnist-rs/common" }
bytemuck = { version = "1.25.1", features = ["min_const_generics"] }
burn = { version = "0.17", default-features = false, features = ["ndarray", "autodiff"] }
spin = "0.9.8"
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.150", default-features = false }
hex = { version = "0.4.3", default-features = false }
cfg_block = "0.2.0"
rustls = { version = "0.23.41", default-features = false }
webpki-roots = "1.0.4"
anyhow = "1.0.103"
getrandom = { version = "0.2.17", default-features = false }
lazy_static = "1.5.0"
num_enum = { version = "0.7.6", default-features = false }
[profile.release]
panic = "abort"
lto = true
opt-level = 1
